CHANGELOG file
--------------

The rules for CHANGELOG file:

- entries are sorted newest-first
- summarize sets of changes (do not reproduce every git log comment here).
- do not ever delete anything
- keep the format consistent (88 char width, Y/M/D date format) and do not use tabs but
  use spaces for formatting

.. inclusion-marker-changelog-start

0.3.0 (XXXX/XX/XX)
------------------
- Update to sklearn >= 1.6.0 and scipy >= 1.15.0 (#239)
- Fixed moved function import from scipy and bump scipy dependency to 1.15.0 (#236)
- Fix rendering issues for `SparseKDE` and `QuickShift` (#236)
- Updating ``FPS`` to allow a numpy array of ints as an initialize parameter (#145)
- Supported Python versions are now ranging from 3.9 - 3.12.
- Updating ``skmatter.datasets`` submodule to support sklearn 1.5.0 (#229)
- Add `SparseKDE` class (#222)
- Add `QuickShift` class (#222)
- Add an example on how to conduct PAMM algorithm with `SparseKDE` and `QuickShift`
  (#222)
- Add H2O-BLYP-Piglet dataset (#222)
- Add two distance metrics that support the periodic boundry condition, 
  `periodic_pairwise_euclidean_distances` and `pairwise_mahalanobis_distances` (#222)

0.2.0 (2023/08/24)
------------------
- Add this ``CHANGELOG`` file (#198)
- Update example of WHO feature selection (#212)
- Rename ``RidgeRegression2FoldCV`` -> ``Ridge2FoldCV`` (#211)
- Adding metrics for prediction rigidity (#209)
- Overhaul of documentation page (#200 to #204)
- Rename and add member variables (#197)
- Fix/check estimator (#196)
- fixed small typo in ``PCovR`` class documentation (#194)
- Resolved Issue WHO dataset missing function call section in doc (#181, #192)
- Speeding up tests (#190)
- Removing kernel optimization from who example (#189)
- Ignore rendered examples for linting (#188)
- Add more infos on documentation landing pages & ``CODE_OF_CONDUCT`` (#186)
- Add contributors pictures to ``README``, show pip install instructions in docs (#185)