@@ -25,19 +25,16 @@ The module includes:
   original PCovR method, proposed in [Helfrecht2020]_.
 """
 
-from ._pcov import _BasePCov, pcovr_covariance, pcovr_kernel
+from ._pcov import _BasePCov
 
 from ._pcovr import PCovR
-from ._kernel_pcovr import KernelPCovR
-
 from ._pcovc import PCovC
 
+from ._kernel_pcovr import KernelPCovR
 
 __all__ = [
     "_BasePCov",
-    "pcovr_covariance",
-    "pcovr_kernel",
     "PCovR",
-    "KernelPCovR",
     "PCovC",
+    "KernelPCovR",
 ]
